--- a/_notebooks/2022-05-13-as-hw.ipynb
+++ b/_notebooks/2022-05-13-as-hw.ipynb
@@ -20,17 +20,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "1dae04f1-56ae-42a5-a162-4916b3d69a65",
+   "cell_type": "markdown",
+   "id": "93a9c948-0d19-44c8-9469-31be39080adc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#hide\n",
-    "options(jupyter.plot_scale=4)\n",
-    "options(repr.plot.width=8,repr.plot.height=4,repr.plot.res=500)\n",
-    "#options(jupyter.rich_display=FALSE)\n",
-    "#options(max.print=1000)"
+    "# 응용통계학 과제 20220512\n",
+    "- 202150754 최서연\n",
+    "> 다중공선성 "
    ]
   },
   {
@@ -168,35 +164,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 176,
-   "id": "3a9900b3-b513-4e77-b8e2-0dd727b5a864",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "1.39989660728271"
-      ],
-      "text/latex": [
-       "1.39989660728271"
-      ],
-      "text/markdown": [
-       "1.39989660728271"
-      ],
-      "text/plain": [
-       "[1] 1.399897"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "mean(hatb1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "86df5d1c-73c9-4211-b42e-d951f4b81e2a",
    "metadata": {},
@@ -232,37 +199,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 223,
    "id": "4b9407c6-4459-4243-9200-e12f07e77f63",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = runif(100)\n",
-    "x2 = x1 + rnorm(100,0,0.01)\n",
-    "x3 = x1 + rnorm(100,0,0.1)\n",
-    "y1=3 + x1 + rnorm(100)\n",
-    "y2=3 + x1 + 1.5*x2 + 3.5*x3 + rnorm(100)"
+    "x1 = runif(500)\n",
+    "x2 = x1 + rnorm(500,0,0.01)\n",
+    "x3 = x1 + rnorm(500,0,0.1)\n",
+    "y1= 3 + x1 + 1.5*x2 + 3.5*x3 + rnorm(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 224,
    "id": "8f7e2bad-a5e7-492f-8bc6-951cd28e933d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.999495844838783"
+       "0.999397955067459"
       ],
       "text/latex": [
-       "0.999495844838783"
+       "0.999397955067459"
       ],
       "text/markdown": [
-       "0.999495844838783"
+       "0.999397955067459"
       ],
       "text/plain": [
-       "[1] 0.9994958"
+       "[1] 0.999398"
       ]
      },
      "metadata": {},
@@ -271,16 +237,16 @@
     {
      "data": {
       "text/html": [
-       "0.939631738624343"
+       "0.947206821885553"
       ],
       "text/latex": [
-       "0.939631738624343"
+       "0.947206821885553"
       ],
       "text/markdown": [
-       "0.939631738624343"
+       "0.947206821885553"
       ],
       "text/plain": [
-       "[1] 0.9396317"
+       "[1] 0.9472068"
       ]
      },
      "metadata": {},
@@ -302,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 225,
    "id": "78628715-07dd-472f-a84d-92294c92be8f",
    "metadata": {},
    "outputs": [],
@@ -312,17 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 227,
    "id": "7f1d1038-3dbd-4b91-bd9a-25819a4b8f6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "M2 = lm(y2~x1+x2+x3)"
+    "M2 = lm(y1~x1+x2+x3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 229,
    "id": "fea833d0-a7a0-4c58-b5b7-5e5be6f7dd02",
    "metadata": {},
    "outputs": [
@@ -334,25 +300,25 @@
        ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
        ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
        ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-       "</style><dl class=dl-inline><dt>x1</dt><dd>1029.92208478094</dd><dt>x2</dt><dd>1003.54954717499</dd><dt>x3</dt><dd>8.63963892909384</dd></dl>\n"
+       "</style><dl class=dl-inline><dt>x1</dt><dd>843.200649128036</dd><dt>x2</dt><dd>831.081926727956</dd><dt>x3</dt><dd>9.73155177017751</dd></dl>\n"
       ],
       "text/latex": [
        "\\begin{description*}\n",
-       "\\item[x1] 1029.92208478094\n",
-       "\\item[x2] 1003.54954717499\n",
-       "\\item[x3] 8.63963892909384\n",
+       "\\item[x1] 843.200649128036\n",
+       "\\item[x2] 831.081926727956\n",
+       "\\item[x3] 9.73155177017751\n",
        "\\end{description*}\n"
       ],
       "text/markdown": [
        "x1\n",
-       ":   1029.92208478094x2\n",
-       ":   1003.54954717499x3\n",
-       ":   8.63963892909384\n",
+       ":   843.200649128036x2\n",
+       ":   831.081926727956x3\n",
+       ":   9.73155177017751\n",
        "\n"
       ],
       "text/plain": [
-       "         x1          x2          x3 \n",
-       "1029.922085 1003.549547    8.639639 "
+       "        x1         x2         x3 \n",
+       "843.200649 831.081927   9.731552 "
       ]
      },
      "metadata": {},
@@ -368,12 +334,12 @@
    "id": "9fd7a774-3964-4496-a99c-0fa65cb8121c",
    "metadata": {},
    "source": [
-    "VIF 10 넘는 모습, x3은 10이 안 넘었다."
+    "다중공선성 존재를 가정한 모형의 VIF 10 넘는 모습이었다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 230,
    "id": "c843e576-a078-40f2-9372-3faf2379776c",
    "metadata": {},
    "outputs": [
@@ -385,23 +351,23 @@
        ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
        ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
        ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-       "</style><dl class=dl-inline><dt>(Intercept)</dt><dd>2.7444945807435</dd><dt>x1</dt><dd>1.38607718875293</dd></dl>\n"
+       "</style><dl class=dl-inline><dt>(Intercept)</dt><dd>3.13908871355663</dd><dt>x1</dt><dd>5.72431221101947</dd></dl>\n"
       ],
       "text/latex": [
        "\\begin{description*}\n",
-       "\\item[(Intercept)] 2.7444945807435\n",
-       "\\item[x1] 1.38607718875293\n",
+       "\\item[(Intercept)] 3.13908871355663\n",
+       "\\item[x1] 5.72431221101947\n",
        "\\end{description*}\n"
       ],
       "text/markdown": [
        "(Intercept)\n",
-       ":   2.7444945807435x1\n",
-       ":   1.38607718875293\n",
+       ":   3.13908871355663x1\n",
+       ":   5.72431221101947\n",
        "\n"
       ],
       "text/plain": [
        "(Intercept)          x1 \n",
-       "   2.744495    1.386077 "
+       "   3.139089    5.724312 "
       ]
      },
      "metadata": {},
@@ -414,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 232,
    "id": "9e2543df-d2b3-4510-b9a9-b20a324ad3e8",
    "metadata": {},
    "outputs": [
@@ -426,27 +392,27 @@
        ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
        ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
        ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-       "</style><dl class=dl-inline><dt>(Intercept)</dt><dd>3.06220736790038</dd><dt>x1</dt><dd>24.3042602097756</dd><dt>x2</dt><dd>-21.9766264874469</dd><dt>x3</dt><dd>3.61151631243572</dd></dl>\n"
+       "</style><dl class=dl-inline><dt>(Intercept)</dt><dd>3.15525842033983</dd><dt>x1</dt><dd>-1.18623189027701</dd><dt>x2</dt><dd>3.55249697741275</dd><dt>x3</dt><dd>3.383658856131</dd></dl>\n"
       ],
       "text/latex": [
        "\\begin{description*}\n",
-       "\\item[(Intercept)] 3.06220736790038\n",
-       "\\item[x1] 24.3042602097756\n",
-       "\\item[x2] -21.9766264874469\n",
-       "\\item[x3] 3.61151631243572\n",
+       "\\item[(Intercept)] 3.15525842033983\n",
+       "\\item[x1] -1.18623189027701\n",
+       "\\item[x2] 3.55249697741275\n",
+       "\\item[x3] 3.383658856131\n",
        "\\end{description*}\n"
       ],
       "text/markdown": [
        "(Intercept)\n",
-       ":   3.06220736790038x1\n",
-       ":   24.3042602097756x2\n",
-       ":   -21.9766264874469x3\n",
-       ":   3.61151631243572\n",
+       ":   3.15525842033983x1\n",
+       ":   -1.18623189027701x2\n",
+       ":   3.55249697741275x3\n",
+       ":   3.383658856131\n",
        "\n"
       ],
       "text/plain": [
        "(Intercept)          x1          x2          x3 \n",
-       "   3.062207   24.304260  -21.976626    3.611516 "
+       "   3.155258   -1.186232    3.552497    3.383659 "
       ]
      },
      "metadata": {},
@@ -459,23 +425,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 233,
    "id": "077314e1-c894-402b-b104-d7fa487854e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.941335365062225"
+       "1.11142741872991"
       ],
       "text/latex": [
-       "0.941335365062225"
+       "1.11142741872991"
       ],
       "text/markdown": [
-       "0.941335365062225"
+       "1.11142741872991"
       ],
       "text/plain": [
-       "[1] 0.9413354"
+       "[1] 1.111427"
       ]
      },
      "metadata": {},
@@ -488,23 +454,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 235,
    "id": "f534b02b-7d66-4485-9c67-2340149d0b50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "1.10784224527402"
+       "1.00320582298134"
       ],
       "text/latex": [
-       "1.10784224527402"
+       "1.00320582298134"
       ],
       "text/markdown": [
-       "1.10784224527402"
+       "1.00320582298134"
       ],
       "text/plain": [
-       "[1] 1.107842"
+       "[1] 1.003206"
       ]
      },
      "metadata": {},
@@ -512,7 +478,15 @@
     }
    ],
    "source": [
-    "mean((y2-predict(M2,data.frame(x1,x2,x3)))^2)"
+    "mean((y1-predict(M2,data.frame(x1,x2,x3)))^2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba55d48f-7c01-484d-a443-f6211bac7e2a",
+   "metadata": {},
+   "source": [
+    "다중공선성을 제거한 모형이 다중공선성이 있는 모형보다 제곱평균오차가 컸다."
    ]
   },
   {
@@ -533,19 +507,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "id": "e49c4ffa-cad7-43ce-ba09-a45cac956a3a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>119.489267246747</li><li>119.489267246747</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 119.489267246747\n",
+       "\\item 119.489267246747\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 119.489267246747\n",
+       "2. 119.489267246747\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 119.4893 119.4893"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>21.7697119975299</li><li>1.09460200852911</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 21.7697119975299\n",
+       "\\item 1.09460200852911\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 21.7697119975299\n",
+       "2. 1.09460200852911\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 21.769712  1.094602"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Nrep = 200\n",
+    "\n",
+    "n = 1000\n",
+    "\n",
+    "hatb1 <- hatb2 <- c()\n",
+    "te1 <- te2 <- c()\n",
+    "\n",
+    "for (k in 1:Nrep)\n",
+    "{\n",
+    "x1 = runif(n,-3,3)\n",
+    "x2 = x1 + rnorm(n,0,0.01)\n",
+    "x3 = x1^2 + rnorm(n,0,0.01)\n",
+    "y = 2 + x1 + 2*x2 + 3*x3 + rnorm(n)\n",
+    "\n",
+    "ind = sample(1:n,500)\n",
+    "tx1 = x1[ind]\n",
+    "tx2 = x2[ind]\n",
+    "tx3 = x3[ind]\n",
+    "test_x1 = x1[-ind]\n",
+    "test_x2 = x2[-ind]\n",
+    "test_x3 = x3[-ind]\n",
+    "ty  = y[ind]\n",
+    "test_y = y[-ind]\n",
+    "\n",
+    "M2 = lm(ty~tx1+tx2+tx3)\n",
+    "M1 = lm(ty~tx1)\n",
+    "\n",
+    "hatb1[k] = M2$coefficients[2]\n",
+    "hatb2[k] = M1$coefficients[2]\n",
+    "\n",
+    "te1[k] = mean((test_y - predict(M1,newdata=data.frame(test_x1,test_x2,test_x3)))^2)\n",
+    "te2[k] = mean((test_y - predict(M1,newdata=data.frame(test_x1)))^2)\n",
+    "}\n",
+    "\n",
+    "c(mean(te1),mean(te2))\n",
+    "c(mean((hatb1-1)^2),mean((hatb2-2)^2))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c1afdb0-f1f7-479f-b4fb-b6192887d84d",
+   "cell_type": "markdown",
+   "id": "b7685a18-e54e-430b-b411-fa6810ee1589",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "다중공선성이 있는 모형과 다중공선성이 없는 모형의 MSE가 같았다."
+   ]
   }
  ],
  "metadata": {
