--- a/_notebooks/2022-05-23-bds-12주차.ipynb
+++ b/_notebooks/2022-05-23-bds-12주차.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "56f59254-45c4-4dc1-8ec1-44ce5e4ae130",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "4ce7121f-6bb7-4b1d-bb39-f6249ba3cca2",
    "metadata": {
     "id": "4ce7121f-6bb7-4b1d-bb39-f6249ba3cca2"
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8b5bf325-8eb1-4e9a-8da7-0d0d40ff439d",
    "metadata": {
     "id": "8b5bf325-8eb1-4e9a-8da7-0d0d40ff439d"
@@ -3531,6 +3531,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ed435801-a247-4465-b484-6508c150602b",
+   "metadata": {
+    "id": "4ce7121f-6bb7-4b1d-bb39-f6249ba3cca2"
+   },
+   "outputs": [],
+   "source": [
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.fashion_mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1eaf05e4-75cd-4d09-93f4-8c91ebf80014",
+   "metadata": {
+    "id": "8b5bf325-8eb1-4e9a-8da7-0d0d40ff439d"
+   },
+   "outputs": [],
+   "source": [
+    "X= x_train.reshape(-1,28,28,1)/255 ## 입력이 0~255 -> 0~1로 표준화 시키는 효과 + float으로 자료형이 바뀜 \n",
+    "y = tf.keras.utils.to_categorical(y_train)\n",
+    "XX = x_test.reshape(-1,28,28,1)/255\n",
+    "yy = tf.keras.utils.to_categorical(y_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "038d1f13-e0be-4c80-a532-c167c3e76528",
    "metadata": {
@@ -3558,7 +3585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "a4fece12-a770-4ccd-a58a-3728828ce70a",
    "metadata": {},
    "outputs": [],
@@ -3575,7 +3602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "74a3f9ed-3e66-4f72-a044-da531c40aafa",
    "metadata": {},
    "outputs": [
@@ -3584,7 +3611,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "240/240 [==============================] - 2s 6ms/step - loss: 0.7224 - accuracy: 0.7586 - recall: 0.6304 - val_loss: 0.4817 - val_accuracy: 0.8329 - val_recall: 0.7788\n",
+      " 43/240 [====>.........................] - ETA: 0s - loss: 1.3928 - accuracy: 0.5717 - recall: 0.2347    "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-05-30 18:20:09.284327: I tensorflow/stream_executor/cuda/cuda_blas.cc:1774] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "240/240 [==============================] - 3s 6ms/step - loss: 0.7224 - accuracy: 0.7586 - recall: 0.6304 - val_loss: 0.4817 - val_accuracy: 0.8329 - val_recall: 0.7788\n",
       "Epoch 2/5\n",
       "240/240 [==============================] - 1s 5ms/step - loss: 0.4508 - accuracy: 0.8419 - recall: 0.7951 - val_loss: 0.4497 - val_accuracy: 0.8349 - val_recall: 0.7932\n",
       "Epoch 3/5\n",
@@ -3598,10 +3639,10 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fb5b8332f80>"
+       "<keras.callbacks.History at 0x7f8d176abcd0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3622,14 +3663,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "a91c4aae-23ba-4eb5-9055-53cc408100a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 811694), started 0:00:00 ago. (Use '!kill 811694' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 846712), started 0:00:03 ago. (Use '!kill 846712' to kill it.)"
       ]
      },
      "metadata": {},
@@ -3639,11 +3680,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-b161f036a3c6b504\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-b551441869e8d100\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-b161f036a3c6b504\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b551441869e8d100\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -3676,7 +3717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "af5dbdde-23c1-4d5f-81ce-d7642fbf5f20",
    "metadata": {},
    "outputs": [],
@@ -3693,7 +3734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6c5fb98e-255f-401d-86c2-c463cf0defee",
    "metadata": {},
    "outputs": [
@@ -3702,7 +3743,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "240/240 [==============================] - 2s 6ms/step - loss: 1.6588 - accuracy: 0.4999 - recall: 0.0831 - val_loss: 1.1223 - val_accuracy: 0.6730 - val_recall: 0.2842\n",
+      "240/240 [==============================] - 2s 5ms/step - loss: 1.6588 - accuracy: 0.4999 - recall: 0.0831 - val_loss: 1.1223 - val_accuracy: 0.6730 - val_recall: 0.2842\n",
       "Epoch 2/5\n",
       "240/240 [==============================] - 1s 5ms/step - loss: 0.9301 - accuracy: 0.6911 - recall: 0.4377 - val_loss: 0.8035 - val_accuracy: 0.7196 - val_recall: 0.5241\n",
       "Epoch 3/5\n",
@@ -3716,10 +3757,10 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fb5be17f3a0>"
+       "<keras.callbacks.History at 0x7f8ca85c3370>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3738,14 +3779,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "7f41a1ef-1b37-47e1-9921-c5492b923e50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 811337), started 0:00:04 ago. (Use '!kill 811337' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 847006), started 0:00:02 ago. (Use '!kill 847006' to kill it.)"
       ]
      },
      "metadata": {},
@@ -3755,11 +3796,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-1acb14860c0ac6a\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-46979a527bed9065\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-1acb14860c0ac6a\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-46979a527bed9065\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -3784,7 +3825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "6d62cacf-5c94-4162-aa9e-20fdd2873ba3",
    "metadata": {},
    "outputs": [
@@ -3792,7 +3833,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 1s 4ms/step - loss: 0.4171 - accuracy: 0.8543 - recall: 0.8275\n"
+      "313/313 [==============================] - 2s 4ms/step - loss: 0.4171 - accuracy: 0.8543 - recall: 0.8275\n"
      ]
     },
     {
@@ -3801,7 +3842,7 @@
        "0.41707104444503784"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3812,7 +3853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "f9a17bf1-ea12-4a3c-8b2a-706211cd5e1a",
    "metadata": {},
    "outputs": [
@@ -3829,7 +3870,7 @@
        "0.6277241706848145"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
