--- a/_notebooks/2022-05-23-bds-12주차.ipynb
+++ b/_notebooks/2022-05-23-bds-12주차.ipynb
@@ -3532,7 +3532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ed435801-a247-4465-b484-6508c150602b",
    "metadata": {
     "id": "4ce7121f-6bb7-4b1d-bb39-f6249ba3cca2"
@@ -3544,7 +3544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "1eaf05e4-75cd-4d09-93f4-8c91ebf80014",
    "metadata": {
     "id": "8b5bf325-8eb1-4e9a-8da7-0d0d40ff439d"
@@ -3585,7 +3585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "a4fece12-a770-4ccd-a58a-3728828ce70a",
    "metadata": {},
    "outputs": [],
@@ -3602,7 +3602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "74a3f9ed-3e66-4f72-a044-da531c40aafa",
    "metadata": {},
    "outputs": [
@@ -3611,21 +3611,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      " 43/240 [====>.........................] - ETA: 0s - loss: 1.3928 - accuracy: 0.5717 - recall: 0.2347    "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-05-30 18:20:09.284327: I tensorflow/stream_executor/cuda/cuda_blas.cc:1774] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "240/240 [==============================] - 3s 6ms/step - loss: 0.7224 - accuracy: 0.7586 - recall: 0.6304 - val_loss: 0.4817 - val_accuracy: 0.8329 - val_recall: 0.7788\n",
+      "240/240 [==============================] - 2s 6ms/step - loss: 0.7224 - accuracy: 0.7586 - recall: 0.6304 - val_loss: 0.4817 - val_accuracy: 0.8329 - val_recall: 0.7788\n",
       "Epoch 2/5\n",
       "240/240 [==============================] - 1s 5ms/step - loss: 0.4508 - accuracy: 0.8419 - recall: 0.7951 - val_loss: 0.4497 - val_accuracy: 0.8349 - val_recall: 0.7932\n",
       "Epoch 3/5\n",
@@ -3639,10 +3625,10 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f8d176abcd0>"
+       "<keras.callbacks.History at 0x7f3848153fd0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3663,14 +3649,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "a91c4aae-23ba-4eb5-9055-53cc408100a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 846712), started 0:00:03 ago. (Use '!kill 846712' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 1366833), started 0:01:06 ago. (Use '!kill 1366833' to kill it.)"
       ]
      },
      "metadata": {},
@@ -3680,11 +3666,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-b551441869e8d100\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-5a2b5d6fce587a5\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-b551441869e8d100\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-5a2b5d6fce587a5\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -3825,7 +3811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "6d62cacf-5c94-4162-aa9e-20fdd2873ba3",
    "metadata": {},
    "outputs": [
@@ -3833,16 +3819,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 2s 4ms/step - loss: 0.4171 - accuracy: 0.8543 - recall: 0.8275\n"
+      "313/313 [==============================] - 1s 4ms/step - loss: 0.4171 - accuracy: 0.8543 - recall: 0.8275\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.41707104444503784"
+       "0.41707098484039307"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
