--- a/_notebooks/Untitled.ipynb
+++ b/_notebooks/Untitled.ipynb
@@ -1,21 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f41a866b-bafc-43ce-a8ce-a70f7ee2c480",
+   "cell_type": "markdown",
+   "id": "ff450e63-ecb4-401a-aad4-9bc5310bf11e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "asdfasdf"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
