--- a/_notebooks/2022-09-07-ml.ipynb
+++ b/_notebooks/2022-09-07-ml.ipynb
@@ -7,7 +7,14 @@
     "id": "c71eeda5-37c9-48c6-a503-92d3b2c900c7"
    },
    "source": [
-    "# 기계학습특강 "
+    "# 기계학습 특강 (1주차) 9월7일 Intro\n",
+    "\n",
+    "- toc:true\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: false\n",
+    "- author: 최서연\n",
+    "- categories: [Special Topics in Machine Learning]"
    ]
   },
   {
