--- a/_notebooks/2022-09-14-ml_9월14일.ipynb
+++ b/_notebooks/2022-09-14-ml_9월14일.ipynb
@@ -8,14 +8,15 @@
     "tags": []
    },
    "source": [
-    "# (2주차) 9월14일 -- draft\n",
+    "# 기계학습 특강 (2주차) 9월14일\n",
     ">  Overview - 추천시스템, 텍스트분석, GAN \n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- author: 최규빈"
+    "- author: 최서연\n",
+    "- categories: [Special Topics in Machine Learning, 추천시스템, 텍스트분석, GAN]"
    ]
   },
   {
