--- a/_notebooks/2022-09-14-ml_9월14일.ipynb
+++ b/_notebooks/2022-09-14-ml_9월14일.ipynb
@@ -14,7 +14,7 @@
     "- toc:true\n",
     "- branch: master\n",
     "- badges: true\n",
-    "- comments: true\n",
+    "- comments: false\n",
     "- author: 최서연\n",
     "- categories: [Special Topics in Machine Learning, 추천시스템, 텍스트분석, GAN]"
    ]
