--- a/_notebooks/2022-09-14-ml_9월14일.ipynb
+++ b/_notebooks/2022-09-14-ml_9월14일.ipynb
@@ -9,6 +9,7 @@
    },
    "source": [
     "# 기계학습 특강 (2주차) 9월14일\n",
+    ">  Overview - 추천시스템, 텍스트분석, GAN \n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
