--- a/_notebooks/2022-09-19-ml_Assignment_1.ipynb
+++ b/_notebooks/2022-09-19-ml_Assignment_1.ipynb
@@ -1302,12 +1302,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "d1510953-a666-4729-9fea-8b2714d06c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([73., 73., 73., 73., 73., 73., 73., 73., 73., 73., 73., 73., 73., 73.,\n",
+       "        73., 73., 73., 73., 73.])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user73 = torch.ones(19) * 73\n",
+    "user73"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99617745-0458-4a07-9137-02328d9c97ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user"
+    "item20 = "
    ]
   },
   {
