--- a/_notebooks/2022-09-19-ml_Assignment_1.ipynb
+++ b/_notebooks/2022-09-19-ml_Assignment_1.ipynb
@@ -1325,12 +1325,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "99617745-0458-4a07-9137-02328d9c97ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "item20 = "
+    "item20 = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1d194eb2-8198-4ca9-970a-7d5a13fe66c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1,21):\n",
+    "    item20.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8153914e-9313-4d6f-be04-800adae43337",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73002689-2e9f-454a-aac7-9ff95f2c6847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame({'user':user73,'item':item20})"
    ]
   },
   {
