--- a/_notebooks/2022-09-19-ml_Assignment_1.ipynb
+++ b/_notebooks/2022-09-19-ml_Assignment_1.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Assignment 1 (09.19)\n",
+    "# 기계학습 Assignment 1 (09.19)\n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
