--- a/_notebooks/2022-09-21-rl_과제.ipynb
+++ b/_notebooks/2022-09-21-rl_과제.ipynb
@@ -20,12 +20,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa2c04e0-64ee-4686-9608-f77c441671a5",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "478dd71a-7a4c-4e03-a0af-7c9cc5fe21e5",
    "metadata": {},
    "source": [
     "과제1\n",
     "\n",
-    "풀이 :\n",
+    "**풀이** :\n",
     "\n",
     "R 이용하지 않고 직접 계산. (R로 단순 계산은 해도 됨)\n",
     "\n",
@@ -35,13 +43,21 @@
     "\n",
     " \n",
     "\n",
-    "제출 기한 : 10월 03일\n",
+    "- 제출 기한 : 10월 03일\n",
     "\n",
-    "제출 방법 : \n",
+    "**제출 방법** : \n",
     "\n",
     "직접 제출 (607호) 또는 스캔, 사진, tex 작업, 문서 작업 등 후 pdf로 변환 후 제출\n",
     "\n",
     "pdf 아닌 경우 미제출 처리"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e4a318e-264d-4024-aafc-6b54bcd643ba",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -52,6 +68,18 @@
     "1. 원점을 지나는 회귀모형은 다음과 같이 정의할 수 있다.\n",
     "$$y_i =β_1x_i +ε_i, ε_i ∼_{i.i.d.} N(0,σ^2), i=1,...,n$$\n",
     "오차제곱합을 정의하고 $β_1$ 의 최소제곱추정량 ($\\hat{β}_1$)을 구하여라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5832b8bd-b376-4bc3-91ef-0a75dd40c4e2",
+   "metadata": {},
+   "source": [
+    "$SSE = (y_i - \\hat{y_i})^2$\n",
+    "\n",
+    "$ = (y_i - \\hat{\\beta_i| x_i - \\epsilon_i)^2$\n",
+    "\n",
+    "$ = ()$"
    ]
   },
   {
